tests/fixtures/power10/fail/unbounded-loop.ts
export async function pollForever(): Promise<void> {
  while (true) {
    await Promise.resolve();
  }
}
